# Drone_detection_yolov11

./: CMakeLists.txt  README.md
src/: bbox.cpp  bbox.h  main.cpp  yolov11_onnx.cpp  yolov11_onnx.h
